--- a/jdstore/app/views/carts/index.html.erb
+++ b/jdstore/app/views/carts/index.html.erb
@@ -12,6 +12,7 @@
           <th colspan="2">商品资讯</th>
           <th>单价</th>
           <th>数量</th>
+           <th>操作选项 </th>
         </tr>
       </thead>
       <tbody>
@@ -36,6 +37,11 @@
             <td>
               <%= cart_item.quantity %>
             </td>
+            <td>
+             <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
+               <i class="fa fa-trash"></i>
+             <% end %>
+           </td>
           </tr>
         <% end %>
 
@@ -47,12 +53,12 @@
     <div class="total clearfix">
       <span class="pull-right">
         <% sum = 0 %>
-           <% current_cart.cart_items.each do |cart_item| %>
-             <% if cart_item.product.price.present? %>
-               <% sum = sum  cart_item.quantity * cart_item.product.price %>
-             <% end %>
-           <% end %>
-           总计 <%= sum %> RMB
+              <% current_cart.cart_items.each do |cart_item| %>
+                <% if cart_item.product.price.present? %>
+                  <% sum = sum + cart_item.quantity * cart_item.product.price %>
+                <% end %>
+              <% end %>
+              总计 <%= sum %> RMB
       </span>
     </div>
 
