--- a/jdstore/app/views/common/_navbar.html.erb
+++ b/jdstore/app/views/common/_navbar.html.erb
@@ -14,7 +14,7 @@
                  </li>
                </ul>
 
-
+              
 
             <ul class="nav navbar-nav navbar-right">
               <% if !current_user %>
@@ -27,6 +27,12 @@
                        <b class="caret"></b>
                    </a>
                    <ul class="dropdown-menu">
+                   <% if current_user.admin? %>
+                   <li>
+                 <%= link_to("Admin 选单", admin_products_path ) %>
+               </li>
+             <% end %>
+             <li>
                        <li> <%= link_to(content_tag(:i, '登出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %> </li>
                    </ul>
                  </li>
