--- a/jdstore/app/views/products/show.html.erb
+++ b/jdstore/app/views/products/show.html.erb
@@ -17,6 +17,9 @@
     <div class="product-price"> ￥ <%= @product.price %> </div>
     <div class="pull-right">
       <%= link_to("加入购物车", add_to_cart_product_path(@product), :method => :post, :class => "btn btn-primary btn-lg btn-danger") %>
-    </div>
+      <% else %>
+         已销售一空，无法购买
+       <% end %>
+</div>
   </div>
 </div>
